// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-header renders 1`] = `
<ld-header class="ld-header" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders hidden 1`] = `
<ld-header class="ld-header ld-header--hidden ld-header--sticky" hidden="" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders hide-on-scroll 1`] = `
<ld-header class="ld-header ld-header--sticky" hide-on-scroll="" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders sticky 1`] = `
<ld-header class="ld-header ld-header--sticky" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders with content 1`] = `
<ld-header class="ld-header" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
  <ld-typo>
    Liquid Oxygen
  </ld-typo>
</ld-header>
`;

exports[`ld-header renders with linked logo 1`] = `
<ld-header class="ld-header" logo-title="Home" logo-url="#" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <a class="ld-header__logo-wrapper" href="#" part="logo-wrapper" title="Home">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </a>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders with logo title 1`] = `
<ld-header class="ld-header" logo-title="Logo" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo" title="Logo"></ld-icon>
        </slot>
      </div>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders with site name 1`] = `
<ld-header class="ld-header" role="banner" site-name="Liquid Oxygen">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot name="start"></slot>
      <div class="ld-header__logo-wrapper" part="logo-wrapper">
        <slot name="logo">
          <ld-icon class="ld-header__logo" name="initial-m" part="logo"></ld-icon>
        </slot>
      </div>
      <ld-typo class="ld-header_site-name" part="site-name" tag="div" variant="h5">
        Liquid Oxygen
      </ld-typo>
      <slot></slot>
      <div class="ld-header__grow" part="spacer"></div>
      <slot name="end"></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;
